# DNA-Profiler

./: .gitignore  CMakeLists.txt  README.md
include/: manager.h  output.h  peopleData.h  personProfile.h  sequenceData.h  unknownProfile.h
src/: main.cpp  manager.cpp  output.cpp  peopleData.cpp  personProfile.cpp  sequenceData.cpp  unknownProfile.cpp
